test/test-cases/negative/undeclared-id.pas

Program test(input, output);

Var x,y: integer;
Begin
    z:= 3;
  read(r, y)
End.
